@@ -39,13 +39,24 @@
 
 	<properties>
 		<revision>0.12-SNAPSHOT</revision>
-		<version.java>11</version.java>
-		<version.javac.release>11</version.javac.release>
-		<version.log4j2>2.17.2</version.log4j2>
-		<version.commonsApi>0.3.22-SNAPSHOT</version.commonsApi>
-		<version.springBoot>2.5.7</version.springBoot>
-		<version.springBootMongoStarter>2.0.3.RELEASE</version.springBootMongoStarter>
-		<version.swagger>3.0.0</version.swagger>
+		<java.version>17</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven.compiler.release>${java.version}</maven.compiler.release>
+		
+		<!-- property to be used for add opens jvm arguments in plugins -->
+		<java.17.addopens>--add-opens java.base/java.util=ALL-UNNAMED
+        	--add-opens java.base/java.lang=ALL-UNNAMED
+		</java.17.addopens>
+		<version.commonsApi>0.3.24-SNAPSHOT</version.commonsApi>
+		<version.springBoot>2.5.14</version.springBoot>
+		
+		<!-- overwrite version defined in spring boot parent pom -->
+		<mongodb.version>4.7.2</mongodb.version>
+		<version.morphia>1.6.1</version.morphia>
+		
+		<springdoc.version>1.6.14</springdoc.version>
+		
 		<version.httpClient>3.1</version.httpClient>
 		<version.javax.annotation>1.3.2</version.javax.annotation>
 		<version.jettison>1.3</version.jettison>
@@ -62,7 +73,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- test dependencies -->
-		<version.testcontainers>1.16.0</version.testcontainers>
+		<version.testcontainers>1.19.7</version.testcontainers>
 		
 		<!-- maven plugins -->
 		<version.maven-surfire-plugin>3.0.0-M6</version.maven-surfire-plugin>
@@ -98,15 +109,87 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+		
+			<!-- upgrade mongo driver and morphia to support mongo V6-->
+			<!-- SG: for some reason, the versions from spring boot take precedence over the versions from api-commons depencies, therefore we need to replicate here the configs from api-commons -->
+			<dependency>
+				<groupId>org.mongodb</groupId>
+				<artifactId>mongodb-driver-legacy</artifactId>
+				<version>${mongodb.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mongodb</groupId>
+				<artifactId>mongodb-driver-sync</artifactId>
+				<version>${mongodb.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mongodb</groupId>
+  				<artifactId>bson</artifactId>
+  				<version>${mongodb.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver-core</artifactId>
+  				<version>${mongodb.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>dev.morphia.morphia</groupId>
+				<artifactId>core</artifactId>
+				<version>${version.morphia}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.mongodb</groupId>
+						<artifactId>mongodb-driver-sync</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.mongodb</groupId>
+						<artifactId>mongodb-driver-legacy</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+
+
+			<!-- excude conflicting dependecies for mongo and logging-->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-mongodb</artifactId>
+				<version>${version.springBoot}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>ch.qos.logback</groupId>
+						<artifactId>logback-classic</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-logging</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.mongodb</groupId>
+						<artifactId>mongodb-driver-sync</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.mongodb</groupId>
+						<artifactId>mongodb-driver-core</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
-
 
 	<build>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
+				<includes>
+					<include>**</include>
+				</includes>
+				<excludes>
+					<exclude>*.bk</exclude>
+			    </excludes>
 			</resource>
 		</resources>
 		<testResources>
@@ -146,9 +229,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<!--
-                  <version>${version.spring.boot}</version>
-                  -->
+				<configuration>
+        				<jvmArguments>${java.17.addopens}</jvmArguments>
+        		</configuration>		
+				
 				<executions>
 					<execution>
 						<goals>
@@ -160,13 +244,15 @@
 								<!-- For some reason BuildProperties.getName() doesn't return the correct value,
                            so we set the name under a different property                      -->
 								<project.name>${project.name}</project.name>
+								<!--
+								<custom.value>123</custom.value>
+								-->
 							</additionalProperties>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>${version.failsafe}</version>
 				<executions>
@@ -216,6 +302,9 @@
 								<resource>
 									<filtering>true</filtering>
 									<directory>src/integration-test/resources</directory>
+									<excludes>
+										<exclude>*.bk</exclude>
+									</excludes>
 								</resource>
 							</resources>
 						</configuration>
@@ -242,10 +331,13 @@
 					<inherited>true</inherited>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.10.1</version>
+					<!--
 					<configuration>
 						<source>${version.java}</source>
 						<target>${version.java}</target>
 					</configuration>
+					-->
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
